[gd_scene load_steps=16 format=3 uid="uid://0e6xrhxtf573"]

[ext_resource type="Script" path="res://Enemies/squid.gd" id="1_y3akl"]
[ext_resource type="Texture2D" uid="uid://rf1xnol6qqod" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-1.png" id="2_1moa7"]
[ext_resource type="Texture2D" uid="uid://dovfkd5eas88o" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-2.png" id="3_jgknp"]
[ext_resource type="Texture2D" uid="uid://dr5u2d1u5043r" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-3.png" id="4_p0cud"]
[ext_resource type="Texture2D" uid="uid://3hxlwominekn" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-4.png" id="5_hyt7i"]
[ext_resource type="Texture2D" uid="uid://b7df86m2c4i3" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-5.png" id="6_hpitm"]
[ext_resource type="Texture2D" uid="uid://m2di5kli61vs" path="res://Assets/Sprite Sheets/enemies/octopus/octopus-1.png" id="7_o2dka"]
[ext_resource type="Texture2D" uid="uid://b71jbgti84ip3" path="res://Assets/Sprite Sheets/enemies/octopus/octopus-2.png" id="8_kyns1"]
[ext_resource type="Texture2D" uid="uid://b3r5as5scg6dh" path="res://Assets/Sprite Sheets/enemies/octopus/octopus-3.png" id="9_gnppt"]
[ext_resource type="Texture2D" uid="uid://cmm1q8l4wt85n" path="res://Assets/Sprite Sheets/enemies/octopus/octopus-4.png" id="10_6mmvf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_76lk6"]
radius = 12.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tl6ye"]
radius = 175.026

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oc5ls"]
radius = 14.0
height = 52.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dug1g"]
size = Vector2(51, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_meok1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1moa7")
}, {
"duration": 1.0,
"texture": ExtResource("3_jgknp")
}, {
"duration": 1.0,
"texture": ExtResource("4_p0cud")
}, {
"duration": 1.0,
"texture": ExtResource("5_hyt7i")
}, {
"duration": 1.0,
"texture": ExtResource("6_hpitm")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_o2dka")
}, {
"duration": 1.0,
"texture": ExtResource("8_kyns1")
}, {
"duration": 1.0,
"texture": ExtResource("9_gnppt")
}, {
"duration": 1.0,
"texture": ExtResource("10_6mmvf")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_o2dka")
}, {
"duration": 1.0,
"texture": ExtResource("8_kyns1")
}, {
"duration": 1.0,
"texture": ExtResource("9_gnppt")
}, {
"duration": 1.0,
"texture": ExtResource("10_6mmvf")
}],
"loop": true,
"name": &"Move",
"speed": 8.0
}]

[node name="Squid" type="CharacterBody2D"]
script = ExtResource("1_y3akl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3, 7)
shape = SubResource("CapsuleShape2D_76lk6")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_tl6ye")
metadata/_edit_lock_ = true

[node name="DamageHitbox" type="Area2D" parent="."]
visible = false

[node name="Hitbox" type="CollisionShape2D" parent="DamageHitbox"]
position = Vector2(-3, 6)
shape = SubResource("CapsuleShape2D_oc5ls")

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="Attack" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(-0.5, 17.5)
shape = SubResource("RectangleShape2D_dug1g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_meok1")
animation = &"Idle"
autoplay = "Idle"

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_body_entered"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
